--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "@jay-js/monorepo",
+  "description": "A powerful and flexible TypeScript library for UI, state management, lazy loading, routing and managing draggable elements in modern web applications.",
   "version": "1.0.0",
   "repository": "https://github.com/AJCastello/jay-js.git",
   "author": "AJ Castello",
@@ -9,5 +10,12 @@
     "packages/*",
     "examples/*",
     "utils/*"
-  ]
+  ],
+  "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.56",
+    "clean-package": "^2.2.0",
+    "cpy-cli": "^4.2.0",
+    "rimraf": "^5.0.0"
+  }
 }
