--- a/packages/system/.eslintrc.json
+++ b/packages/system/.eslintrc.json
@@ -16,7 +16,7 @@
   },
   "rules": {
     "indent": ["error", 2],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "no-unused-vars": ["warn"],
