--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@jay-js/system",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.js",
+  "version": "1.0.1",
+  "description": "A powerful and flexible TypeScript library for UI, state management, lazy loading, routing and managing draggable elements in modern web applications.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.js",
   "files": [
     "dist"
   ],
@@ -12,11 +12,21 @@
     "./*": "./dist/"
   },
   "scripts": {
-    "dist": "npx tsc",
-    "prebuild": "node ./scripts/prebuild.js",
-    "lint": "eslint ./src/**/*.{js,ts}",
-    "pub": "npx tsc && npm publish ./dist"
+    
+    "prebuild": "rimraf ./dist",
+    "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
+    "build": "swc src -d dist --source-maps inline && npm run build:types",
+    "postbuild": "cpy ./src/**/*.css ./dist && clean-package && cpy ./package.json ./dist && clean-package restore",
+    
+    "pub": "cd ./dist && npm publish --access public",
+
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint ./src/**/*.{js,ts}"
   },
+  "publishConfig": {
+    "access": "public"
+  },
+  "clean-package": "../../clean-package.config.json",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AJCastello/jay-js.git",
@@ -26,18 +36,24 @@
     "Jay",
     "js",
     "single page application",
-    "library"
+    "library",
+    "ui",
+    "components",
+    "state management",
+    "lazy loading", 
+    "routing",
+    "draggable"
   ],
   "author": "AJ Castello",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/AJCastello/jay-js/issues"
   },
   "homepage": "https://github.com/AJCastello/jay-js#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
-    "typescript": "^4.9.3"
+    "typescript": "^5.0.4"
   }
 }
