--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -11,12 +11,12 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "parserOptions": {
-    "ecmaVersion": 2021,
+    "ecmaVersion": 2015,
     "sourceType": "module"
   },
   "rules": {
     "indent": ["error", 2],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "no-unused-vars": ["warn"],
