--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@jay-js/ui",
-  "version": "1.0.0",
-  "description": "A library of UI components for Jay JS using Tailwind CSS and daisyUI.",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.js",
+  "version": "1.0.7",
+  "description": "A library of UI components for Jay JS {headless or} with Tailwind CSS and daisyUI.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.js",
   "files": [
     "dist"
   ],
@@ -12,11 +12,21 @@
     "./*": "./dist/"
   },
   "scripts": {
-    "dist": "npx tsc",
-    "prebuild": "node ./scripts/prebuild.js",
-    "lint": "eslint ./src/**/*.{js,ts}",
-    "pub": "npx tsc && npm publish ./dist"
+    "build2": "npx tsc",
+    "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
+
+    "prebuild": "rimraf ./dist",
+    "build": "swc src -d dist --source-maps inline && npm run build:types",
+    "postbuild": "cpy ./src/**/*.{css,styled} ./dist && clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
+
+    "pub": "cd ./dist && npm publish --access public",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint ./src/**/*.{js,ts}"
   },
+  "publishConfig": {
+    "access": "public"
+  },
+  "clean-package": "../../clean-package.config.json",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AJCastello/jay-js.git",
@@ -26,25 +36,26 @@
     "Jay",
     "js",
     "single page application",
-    "library"
+    "library",
+    "ui",
+    "components",
+    "tailwind",
+    "daisyui",
+    "headless"
   ],
   "author": "AJ Castello",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/AJCastello/jay-js/issues"
   },
   "homepage": "https://github.com/AJCastello/jay-js#readme",
   "dependencies": {
-    "imask": "^6.6.0-alpha.0",
-    "daisyui": "^2.51.5"
+    "imask": "^6.6.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.3"
+    "typescript": "^5.0.4"
   }
 }
