--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,18 +1,22 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "strict": true,
-    "esModuleInterop": true,
-    "outDir": "./dist",
+    "target": "ES6",
+    "module": "ES6",
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
+    "moduleResolution": "Node",
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true,
-    "rootDir": "src",
-    "typeRoots": [
-      "./src/types"
-    ]
+    "outDir": "./dist",
+    "strict": true,
+    "noImplicitAny": true,
   },
-  "include": ["src", "jay-js.env.d.ts"]
+  "include": ["./src/**/*","./src/index.ts"],
+  "exclude": [
+    "./node_modules",
+    "./dist",
+    "./scripts"
+  ]
 }
