--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A powerful and flexible TypeScript library for UI, state management, lazy loading, routing and managing draggable elements in modern web applications.",
   "version": "1.0.0",
   "repository": "https://github.com/AJCastello/jay-js.git",
+  "scripts": {
+    "build": "turbo run build"
+  },
   "author": "AJ Castello",
   "license": "MIT",
   "workspaces": [
@@ -16,6 +19,7 @@
     "@swc/core": "^1.3.56",
     "clean-package": "^2.2.0",
     "cpy-cli": "^4.2.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "turbo": "^1.9.3"
   }
 }
