--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "workspaces": [
     "packages/*",
     "examples/*",
-    "utils/*"
+    "implement/*"
   ],
   "devDependencies": {
     "@swc/cli": "^0.1.62",
