remove scripts from exclude

--- a/packages/system/tsconfig.json
+++ b/packages/system/tsconfig.json
@@ -16,7 +16,6 @@
   "include": ["./src/**/*","./src/index.ts"],
   "exclude": [
     "./node_modules",
-    "./dist",
-    "./scripts"
+    "./dist"
   ]
 }
