--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jay-js/ui",
-  "version": "1.2.12",
+  "version": "2.0.0",
   "description": "A library of UI components for Jay JS {headless or} with Tailwind CSS and daisyUI.",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
@@ -47,13 +47,13 @@
     "url": "https://github.com/AJCastello/jay-js/issues"
   },
   "homepage": "https://github.com/AJCastello/jay-js#readme",
-  "dependencies": {
-    "imask": "^6.6.1"
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "tailwind-merge": "^1.14.0"
   }
 }
