--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jay-js/system",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "description": "A powerful and flexible TypeScript library for UI, state management, lazy loading, routing and managing draggable elements in modern web applications.",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
@@ -16,9 +16,7 @@
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
     "build": "swc src -d dist --source-maps inline && pnpm run build:types",
     "postbuild": "cpy ./src/**/*.css ./dist && clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
-    
     "pub": "cd ./dist && pnpm publish --access public",
-
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.{js,ts}"
   },
@@ -39,7 +37,7 @@
     "ui",
     "components",
     "state management",
-    "lazy loading", 
+    "lazy loading",
     "routing",
     "draggable"
   ],
@@ -54,5 +52,8 @@
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "yup": "^1.3.2"
   }
 }
