--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@jay-js/ui",
-  "version": "2.3.2",
+  "version": "2.4.2",
   "description": "A library of UI components for Jay JS {headless or} with Tailwind CSS and daisyUI.",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
   "files": [
