--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -4,6 +4,7 @@
   "description": "A powerful and flexible TypeScript library for UI, state management, lazy loading, routing and managing draggable elements in modern web applications.",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
+  "type": "module",
   "files": [
     "dist"
   ],
