--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -28,7 +28,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AJCastello/jay-js.git",
-    "directory": "packages/ui"
+    "directory": "packages/system"
   },
   "keywords": [
     "Jay",
