--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -54,14 +54,22 @@
   "homepage": "https://github.com/AJCastello/jay-js#readme",
   "devDependencies": {
     "@types/commander": "^2.12.2",
+    "@types/fs-extra": "^11.0.3",
     "@types/jsdom": "^21.1.4",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "typescript": "^5.0.4"
   },
+  "peerDependencies": {
+    "@jay-js/system": "^2.4.3",
+    "@jay-js/ui": "^2.5.2",
+    "@jay-js/jsx": "^1.0.0",
+    "@jay-js/static": "^1.0.0"    
+  },
   "dependencies": {
     "commander": "^11.1.0",
+    "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
     "jsdom": "^22.1.0",
     "marked": "^9.1.3"
