--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "repository": "https://github.com/AJCastello/jay-js.git",
   "scripts": {
     "build": "turbo run build",
-    "ui": "turbo run build --scope @jay-js/ui",
-    "system": "turbo run build --scope @jay-js/system",
-    "cli": "turbo run build --scope @jay-js/cli",
-    "jsx": "turbo run build --scope @jay-js/jsx",
-    "static": "turbo run build --scope @jay-js/static",
-    "update:links": "npm run link:cli && npm run link:system && npm run link:ui && npm run link:jsx && npm run link:static",
-    "link:cli": "cd packages/cli/dist && npm link && cd ../../..",
-    "link:system": "cd packages/system/dist && npm link && cd ../../..",
-    "link:ui": "cd packages/ui/dist && npm link && cd ../../..",
-    "link:jsx": "cd packages/jsx/dist && npm link && cd ../../..",
-    "link:static": "cd packages/static/dist && npm link && cd ../../.."
-    
-  },
+    "build:ui": "turbo run build --scope @jay-js/ui",
+    "build:system": "turbo run build --scope @jay-js/system",
+    "build:cli": "turbo run build --scope @jay-js/cli",
+    "build:jsx": "turbo run build --scope @jay-js/jsx",
+    "build:static": "turbo run build --scope @jay-js/static",
+    "update:links": "pnpm run link:cli && pnpm run link:system && pnpm run link:ui && pnpm run link:jsx && pnpm run link:static",
+    "link:cli": "(cd packages/cli/dist && pnpm link --global)",
+    "link:system": "(cd packages/system/dist && pnpm link --global)",
+    "link:ui": "(cd packages/ui/dist && pnpm link --global)",
+    "link:jsx": "(cd packages/jsx/dist && pnpm link --global)",
+    "link:static": "(cd packages/static/dist && pnpm link --global)",
+    "unlink:all": "pnpm run unlink:static && pnpm run unlink:jsx && pnpm run unlink:ui && pnpm run unlink:system && pnpm run unlink:cli",
+    "unlink:cli": "pnpm unlink --global @jay-js/cli",
+    "unlink:system": "pnpm unlink --global @jay-js/system",
+    "unlink:ui": "pnpm unlink --global @jay-js/ui",
+    "unlink:jsx": "pnpm unlink --global @jay-js/jsx",
+    "unlink:static": "pnpm unlink --global @jay-js/static"
+  },  
   "author": "AJ Castello",
   "license": "MIT",
   "workspaces": [
