--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,12 +13,11 @@
     "./*": "./dist/"
   },
   "scripts": {
-    "build2": "npx tsc",
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
     "prebuild": "rimraf ./dist",
     "build": "swc src -d dist --source-maps inline && pnpm run build:types",
     "postbuild": "cpy ./src/**/*.{css,styled} ./dist && clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
-    "pub": "cd ./dist && pnpm publish --access public",
+    "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.{js,ts}"
   },
