--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -16,8 +16,8 @@
     "prebuild": "rimraf ./dist",
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
     "build": "swc src -d dist --source-maps inline && pnpm run build:types",
-    "postbuild": "cpy ./src/**/*.css ./dist && clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
-    "pub": "cd ./dist && pnpm publish --access public",
+    "postbuild": "clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
+    "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.{js,ts}"
   },
