--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,7 +5,8 @@
   "bin": {
     "jayjs": "./bin/jayjs.js"
   },
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.js",
   "type": "module",
   "files": [
@@ -19,7 +20,7 @@
     "prebuild": "rimraf ./dist",
     "build": "swc src -d dist --source-maps inline && pnpm run build:types",
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
-    "postbuild": "clean-package && cpy ./templates/**/* ./dist/commands/init/templates && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
+    "postbuild": "clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.{js,ts,tsx,jsx}"
@@ -75,6 +76,7 @@
     "gray-matter": "^4.0.3",
     "inquirer": "^9.2.11",
     "jsdom": "^22.1.0",
-    "marked": "^9.1.3"
+    "marked": "^9.1.3",
+    "os": "^0.1.2"
   }
 }
