global links pnpm

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "update:links": "pnpm run link:cli && pnpm run link:system && pnpm run link:ui && pnpm run link:jsx && pnpm run link:static",
     "daemon:clean": "turbo daemon clean",
     "link:cli": "(cd packages/cli/dist && npm link)",
-    "link:system": "(cd packages/system/dist && npm link)",
-    "link:ui": "(cd packages/ui/dist && npm link)",
-    "link:jsx": "(cd packages/jsx/dist && npm link)",
-    "link:static": "(cd packages/static/dist && npm link)",
+    "link:system": "(cd packages/system/dist && pnpm link --global)",
+    "link:ui": "(cd packages/ui/dist && pnpm link --global)",
+    "link:jsx": "(cd packages/jsx/dist && pnpm link --global)",
+    "link:static": "(cd packages/static/dist && pnpm link --global)",
     "unlink:all": "pnpm run unlink:static && pnpm run unlink:jsx && pnpm run unlink:ui && pnpm run unlink:system && pnpm run unlink:cli",
     "unlink:cli": "npm unlink @jay-js/cli",
     "unlink:system": "npm unlink @jay-js/system",
