--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -52,7 +52,7 @@
     "eslint": "^8.39.0",
     "typescript": "^5.0.4"
   },
-  "dependencies": {
-    "@jay-js/ui": "^2.5.2"
+  "peerDependencies": {
+    "@jay-js/ui": "latest"
   }
 }
