--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -54,29 +54,28 @@
   },
   "homepage": "https://github.com/AJCastello/jay-js#readme",
   "devDependencies": {
-    "@types/commander": "^2.12.2",
-    "@types/fs-extra": "^11.0.3",
-    "@types/inquirer": "^9.0.6",
-    "@types/jsdom": "^21.1.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
-    "typescript": "^5.0.4"
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.7",
+    "@types/jsdom": "^21.1.6",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "eslint": "^9.3.0",
+    "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "@jay-js/jsx": "^1.0.0",
-    "@jay-js/static": "^1.0.0",
-    "@jay-js/system": "^2.4.3",
-    "@jay-js/ui": "^2.5.2"
+    "@jay-js/jsx": "*",
+    "@jay-js/static": "*",
+    "@jay-js/system": "*",
+    "@jay-js/ui": "*"
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "commander": "^11.1.0",
-    "fs-extra": "^11.1.1",
+    "commander": "^12.1.0",
+    "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.3",
-    "inquirer": "^9.2.11",
-    "jsdom": "^22.1.0",
-    "marked": "^9.1.3",
+    "inquirer": "^9.2.22",
+    "jsdom": "^24.0.0",
+    "marked": "^12.0.2",
     "os": "^0.1.2"
   }
 }
