--- a/packages/cli/.swcrc
+++ b/packages/cli/.swcrc
@@ -1,7 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/swcrc",
   "module": {
-    "type": "es6"
+    "type": "es6",
+    "resolveFully": true
   },
   "jsc": {
     "parser": {
@@ -9,11 +10,16 @@
       "dynamicImport": true,
       "decorators": true
     },
+    "baseUrl": "./src",
+    "paths": {
+      "src/*": ["./src/*"]
+    },    
     "transform": {},
     "target": "esnext",
     "loose": false,
     "externalHelpers": false,
     "keepClassNames": false
   },
-  "minify": false
+  "minify": false,
+  "sourceMaps": "inline" 
 }
