--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jay-js/jsx",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A JSX library for Jay JS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,7 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
-    "build": "swc src -d dist --source-maps inline && pnpm run build:types",
+    "build": "swc src -d dist && pnpm run build:types && cpy \"dist/src/**/*\" dist && rimraf ./dist/src",
     "postbuild": "clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
