--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -78,6 +78,7 @@
     "inquirer": "^9.2.22",
     "jsdom": "^24.0.0",
     "marked": "^12.0.2",
-    "os": "^0.1.2"
+    "os": "^0.1.2",
+    "yaml": "^2.4.3"
   }
 }
