--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,8 +18,10 @@
   },
   "scripts": {
     "prebuild": "rimraf ./dist",
-    "build": "swc src -d dist && pnpm run build:types && cpy \"dist/src/**/*\" dist && rimraf ./dist/src",
+    "build": "swc src -d dist && pnpm run build:types && pnpm run build:copy && pnpm run build:chmod",
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
+    "build:copy": "cpy \"dist/src/**/*\" dist && rimraf ./dist/src",
+    "build:chmod": "chmod +x ./dist/bin/jayjs.js",
     "postbuild": "clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
@@ -63,14 +65,9 @@
     "eslint": "^9.3.0",
     "typescript": "^5.4.5"
   },
-  "peerDependencies": {
-    "@jay-js/jsx": "*",
-    "@jay-js/static": "*",
-    "@jay-js/system": "*",
-    "@jay-js/ui": "*"
-  },
   "dependencies": {
     "chalk": "^5.3.0",
+    "chalk-template": "^1.1.0",
     "commander": "^12.1.0",
     "degit": "^2.8.4",
     "fs-extra": "^11.2.0",
