refactor: Update lazy loading logic to use async/await for module import

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jay-js/ui",
-  "version": "3.1.3",
+  "version": "3.2.0",
   "description": "A library of UI components for Jay JS with Tailwind CSS and daisyUI.",
   "type": "module",
   "main": "dist/index.js",
@@ -15,7 +15,7 @@
   "scripts": {
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
     "prebuild": "rimraf ./dist",
-    "build": "swc src -d dist && pnpm run build:types && cpy \"dist/src/**/*\" dist && rimraf ./dist/src",
+    "build": "swc src -d dist --strip-leading-paths",
     "postbuild": "cpy ./src/**/*.{css,styled} ./dist && clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
