--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,9 +18,8 @@
   },
   "scripts": {
     "prebuild": "rimraf ./dist",
-    "build": "swc src -d dist && pnpm run build:types && pnpm run build:copy && pnpm run build:chmod",
+    "build": "swc src -d dist --strip-leading-paths && pnpm run build:types && pnpm run build:chmod",
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
-    "build:copy": "cpy \"dist/src/**/*\" dist && rimraf ./dist/src",
     "build:chmod": "chmod +x ./dist/bin/jayjs.js",
     "postbuild": "clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
