refactor: Update tsconfig.json to include only necessary source files

--- a/packages/static/tsconfig.json
+++ b/packages/static/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": true,
     "noImplicitAny": true,
   },
-  "include": ["./src/**/*","./src/index.ts", "../cli/src/build", "../cli/src/bin/jayjs.ts"],
+  "include": ["./src/**/*","./src/index.ts"],
   "exclude": [
     "./node_modules",
     "./dist"
