--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "cpy-cli": "^5.0.0",
     "nx": "19.1.0",
     "rimraf": "^5.0.7",
-    "turbo": "^1.13.3"
+    "turbo": "^1.13.3",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
   },
   "packageManager": "pnpm@8.10.2"
 }
