feat: Update Jest configuration and README for draggable utilities

--- a/packages/system/tsconfig.json
+++ b/packages/system/tsconfig.json
@@ -12,7 +12,8 @@
     "outDir": "./dist",
     "strict": true,
     "noImplicitAny": true,
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "esModuleInterop": true
   },
   "include": [
     "./src/**/*",
