--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
   "devDependencies": {
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.6.6",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^22.13.10",
     "clean-package": "^2.2.0",
     "cpy-cli": "^5.0.0",
+    "jest": "^29.5.0",
     "nx": "19.1.0",
     "rimraf": "^5.0.7",
-    "turbo": "^1.13.3",
-    "@types/jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "turbo": "^1.13.3"
   },
   "packageManager": "pnpm@8.10.2"
 }
