feat: Update internationalization module exports to include language management functions

--- a/packages/system/.swcrc
+++ b/packages/system/.swcrc
@@ -20,5 +20,6 @@
     "externalHelpers": false,
     "keepClassNames": false
   },
-  "minify": false
+  "minify": false,
+  "exclude": [".*\\.test\\.js$", ".*\\.spec\\.js$", "__tests__"]  
 }
