--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,11 @@
     "postbuild": "cpy ./src/**/*.{css,styled} ./dist && clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
-    "lint": "biome check --write ./src"
+    "lint": "biome check --write ./src",
+    "test": "jest --verbose",
+    "test:full": "jest --verbose --coverage --coverageReporters=html --coverageReporters=text --collectCoverageFrom='src/**/*.{js,ts}'",
+    "test:cover": "jest --coverage --coverageReporters=html --collectCoverageFrom='src/**/*.{js,ts}'",
+    "test:watch": "jest --watch"
   },
   "publishConfig": {
     "access": "public"
