--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -12,8 +12,16 @@
     "outDir": "./dist",
     "strict": true,
     "noImplicitAny": true,
+    "types": [
+      "jest",
+      "node"
+    ],
+    "esModuleInterop": true
   },
-  "include": ["./src/**/*","./src/index.ts"],
+  "include": [
+    "./src/**/*",
+    "./src/index.ts"
+  ],
   "exclude": [
     "./node_modules",
     "./dist"
