refactor: Remove ESLint configuration and unused proto file; update navigation and route types for consistency

--- a/packages/system/biome.json
+++ b/packages/system/biome.json
@@ -27,7 +27,8 @@
       },
       "recommended": true,
       "suspicious": {
-        "noExplicitAny": "off"
+        "noExplicitAny": "off",
+        "noThenProperty": "off"
       }
     }
   },
