--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "jest": "^29.5.0",
     "nx": "19.1.0",
     "rimraf": "^5.0.7",
-    "ts-jest": "^29.1.0",
-    "turbo": "^1.13.3"
+    "ts-jest": "^29.1.0"
   },
-  "packageManager": "pnpm@8.10.2"
+  "packageManager": "pnpm@10.6.5"
 }
