--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -19,7 +19,7 @@
     "postbuild": "clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint ./src/**/*.{js,ts}"
+    "lint": "biome check --write ./src"
   },
   "publishConfig": {
     "access": "public"
@@ -47,9 +47,7 @@
   },
   "homepage": "https://github.com/AJCastello/jay-js#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^9.3.0",
+    "@biomejs/biome": "^1.9.4",
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
