--- a/docs/package.json
+++ b/docs/package.json
@@ -10,10 +10,10 @@
     "build:css": "tailwindcss -i ./src/styles/globals.css -o ./dist/transformed/styles/globals.css",
     "postbuild": "jayjs build --static",
     "preview": "vite preview",
-    "test": "vitest",
     "lint": "biome check --write ./src"
   },
   "dependencies": {
+    "@jay-js/static": "file:../packages/static/dist",
     "@jay-js/system": "file:../packages/system/dist",
     "@jay-js/ui": "file:../packages/ui/dist",
     "highlight.js": "^11.9.0"
@@ -21,12 +21,11 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@tailwindcss/typography": "^0.5.13",
-    "autoprefixer": "latest",
-    "daisyui": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
+    "@tailwindcss/vite": "^4.0.16",
+    "daisyui": "^5.0.0",
+    "tailwindcss": "^4.0.3",
     "typescript": "latest",
-    "vite": "latest"
+    "vite": "^6.0.11"
   },
   "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771"
 }
