feat(package.json): update link scripts to provide usage instructions for local development

--- a/package.json
+++ b/package.json
@@ -19,17 +19,11 @@
     "pub:jsx": "(cd packages/jsx/dist && npm publish --access public)",
     "pub:static": "(cd packages/static/dist && npm publish --access public)",
     "link:all": "pnpm run link:cli && pnpm run link:system && pnpm run link:ui && pnpm run link:jsx && pnpm run link:static",
-    "link:cli": "(cd packages/cli/dist && pnpm link --global)",
-    "link:system": "(cd packages/system/dist && pnpm link --global)",
-    "link:ui": "(cd packages/ui/dist && pnpm link --global)",
-    "link:jsx": "(cd packages/jsx/dist && pnpm link --global)",
-    "link:static": "(cd packages/static/dist && pnpm link --global)",
-    "unlink:all": "pnpm run unlink:static && pnpm run unlink:jsx && pnpm run unlink:ui && pnpm run unlink:system && pnpm run unlink:cli",
-    "unlink:cli": "npm unlink --global @jay-js/cli",
-    "unlink:system": "npm unlink --global @jay-js/system",
-    "unlink:ui": "npm unlink --global @jay-js/ui",
-    "unlink:jsx": "npm unlink --global @jay-js/jsx",
-    "unlink:static": "npm unlink --global @jay-js/static"
+    "link:cli": "node -e \"const path = require('path').resolve('./packages/cli/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/cli in package.json to:\\n', 'file://' + path)\"",
+    "link:system": "node -e \"const path = require('path').resolve('./packages/system/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/system in package.json to:\\n', 'file://' + path)\"",
+    "link:ui": "node -e \"const path = require('path').resolve('./packages/ui/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/ui in package.json to:\\n', 'file://' + path)\"",
+    "link:jsx": "node -e \"const path = require('path').resolve('./packages/jsx/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/jsx in package.json to:\\n', 'file://' + path)\"",
+    "link:static": "node -e \"const path = require('path').resolve('./packages/static/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/static in package.json to:\\n', 'file://' + path)\""
   },
   "author": "AJ Castello",
   "license": "MIT",
