fix(package.json): remove unnecessary path replacement in link scripts for consistency

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "pub:jsx": "(cd packages/jsx/dist && npm publish --access public)",
     "pub:static": "(cd packages/static/dist && npm publish --access public)",
     "link:all": "pnpm run link:cli && pnpm run link:system && pnpm run link:ui && pnpm run link:jsx && pnpm run link:static",
-    "link:cli": "node -e \"const path = require('path').resolve('./packages/cli/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/cli in package.json to:\\n', 'file://' + path)\"",
-    "link:system": "node -e \"const path = require('path').resolve('./packages/system/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/system in package.json to:\\n', 'file://' + path)\"",
-    "link:ui": "node -e \"const path = require('path').resolve('./packages/ui/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/ui in package.json to:\\n', 'file://' + path)\"",
-    "link:jsx": "node -e \"const path = require('path').resolve('./packages/jsx/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/jsx in package.json to:\\n', 'file://' + path)\"",
-    "link:static": "node -e \"const path = require('path').resolve('./packages/static/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/static in package.json to:\\n', 'file://' + path)\""
+    "link:cli": "node -e \"const path = require('path').resolve('./packages/cli/dist'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/cli in package.json to:\\n', 'file://' + path)\"",
+    "link:system": "node -e \"const path = require('path').resolve('./packages/system/dist'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/system in package.json to:\\n', 'file://' + path)\"",
+    "link:ui": "node -e \"const path = require('path').resolve('./packages/ui/dist'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/ui in package.json to:\\n', 'file://' + path)\"",
+    "link:jsx": "node -e \"const path = require('path').resolve('./packages/jsx/dist'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/jsx in package.json to:\\n', 'file://' + path)\"",
+    "link:static": "node -e \"const path = require('path').resolve('./packages/static/dist'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/static in package.json to:\\n', 'file://' + path)\""
   },
   "author": "AJ Castello",
   "license": "MIT",
